@@ -28,7 +28,8 @@ $ -> Language fix or change
 ! -> Note
 
 05-May-2010 Andrew Eddie
- ^ Rename "installer" plugin group to "extension".
+ ^ Renamed "installer" plugin group to "extension".
+ ^ Added onExtensionBeforeSave and onExtensionAfterSave events to languages, modules, plugins, template styles and source.
 
 04-May-2010 Jean-Marie Simonet
 $ Refactored ini files structure for test alphas
